--- a/v.clip.html
+++ b/v.clip.html
@@ -27,11 +27,13 @@ with <em><a href="v.select.html">v.select<a></em>.
 <h2>EXAMPLES</h2>
 
 <h3>Basic use</h3>
-Clip railroads by counties Wake and Johnston in North Carolina (Nort Carolina data set).
+
+Clip railroads by counties Wake and Johnston in North Carolina (Nort
+Carolina data set).
 
 <div class="code"><pre>
-v.extract input=boundary_county@PERMANENT where=NAME='WAKE' OR NAME='JOHNSTON' output=county_WAKE_JOHNSTON
-v.clip input=railroads@PERMANENT clip=county_WAKE_JOHNSTON@PERMANENT output=railroads_WAKE_JOHNSTON
+v.extract input=boundary_county where="NAME='WAKE' OR NAME='JOHNSTON'" output=county_WAKE_JOHNSTON
+v.clip input=railroads clip=county_WAKE_JOHNSTON output=railroads_WAKE_JOHNSTON
 </pre></div>
 
 <center>
@@ -43,18 +45,20 @@ v.clip input=railroads@PERMANENT clip=county_WAKE_JOHNSTON@PERMANENT output=rail
 <h3>Retain boundaries of clip map</h3>
 
 <div class="code"><pre>
-v.clip -d input=railroads@PERMANENT clip=county_WAKE_JOHNSTON@PERMANENT output=railroads_WAKE_JOHNSTON
+v.clip -d input=railroads clip=county_WAKE_JOHNSTON output=railroads_WAKE_JOHNSTON
 </pre></div>
 
 <h3>Clip by current computational region</h3>
-Clip hospitals by computational region adjusted to counties Wake and Johnston in North Carolina (Nort Carolina data set).
+
+Clip hospitals by computational region adjusted to counties Wake and
+Johnston in North Carolina (North Carolina data set).
 
 It is not obligatory to enter name of clip map. In case it is stated,
 the clip map will be omitted.
 
 <div class="code"><pre>
-v.extract input=boundary_county@PERMANENT where=NAME='WAKE' OR NAME='JOHNSTON' output=county_WAKE_JOHNSTON
-v.clip -r input=hospitals@PERMANENT output=hospitals_clip
+v.extract input=boundary_county where="NAME='WAKE' OR NAME='JOHNSTON'" output=county_WAKE_JOHNSTON
+v.clip -r input=hospitals output=hospitals_clip
 </pre></div>
 
 <center>
@@ -67,13 +71,15 @@ v.clip -r input=hospitals@PERMANENT output=hospitals_clip
 <em>
   <a href="v.overlay.html">v.overlay</a>,
   <a href="v.select.html">v.select</a>, 
-  <a href="v.dissolve.html">v.dissolve</a>
+  <a href="v.dissolve.html">v.dissolve</a>,
   <a href="v.in.region.html">v.in.region</a>
 </em>
 
 <h2>AUTHOR</h2>
 
-Zofie Cimburova, OSGeoREL, Czech Technical University in Prague
+Zofie
+Cimburova, <a href="http://geomatics.fsv.cvut.cz/research/osgeorel/">OSGeoREL</a>,
+Czech Technical University in Prague, Czech Republic
 
 <p>
 <i>Last changed: $Date: 2016-06-28 19:30:00 +0001 (Tue, 28 Jun 2016)$</i>
