Pictures changed back to .png, code styling

--- a/v.clip.html
+++ b/v.clip.html
@@ -37,7 +37,7 @@ v.clip input=railroads clip=county_WAKE_JOHNSTON output=railroads_WAKE_JOHNSTON
 </pre></div>
 
 <center>
- <img src="v_clip.gif" alt="v.clip example" height="300" width="300" ><br>
+ <img src="v_clip_poly.png" alt="v.clip example" height="255" width="600" ><br>
  <em>Figure: v.clip example - basic use</em>
 </center>
 
@@ -62,7 +62,7 @@ v.clip -r input=hospitals output=hospitals_clip
 </pre></div>
 
 <center>
- <img src="v_clip_r.gif" alt="v.clip example" height="300" width="300" ><br>
+ <img src="v_clip_region.png" alt="v.clip example" height="259" width="600"><br>
  <em>Figure: v.clip example - clip by computational region</em>
 </center>
 
